fixed lead generator box to align with left side

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -80,7 +80,7 @@ p {
 
 .benefits {
     margin-right: 20px;
-    padding: 20px;
+    padding: 30px;
     clear: both;
     float: right;
     width: 20%;
@@ -203,3 +203,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
